syntax = "proto3";

package api.usercenter;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "user/types/user.proto";
import "user/types/settings.proto";
import "aiagent/aiagent_service.proto";
import "public/response/response.proto";
import "validate/validate.proto";
import "usercenter/user.proto";

option go_package = "store/api/usercenter;ucpb";

service UserService {
  rpc GetUser (GetUserRequest) returns (User) {
    option (google.api.http) = {
      get: "/api/usr/users/me"
    };
  };
  rpc UpdateUser (UpdateUserRequest) returns (User) {
    option (google.api.http) = {
      patch: "/api/usr/users/me"
      body: "*"
    };
  };
  rpc _ListUsers (_ListUsersRequest) returns (UserList) {};
  rpc _GetUser (_GetUserRequest) returns (User) {};
  rpc _GetUserByPhone (_GetUserByPhoneRequest) returns (User) {};
}


message _ListUsersRequest {
  int64 page = 1;
  int64 size = 2;
  string keyword = 3;
}

message UserList {
  repeated User list = 1;
  int64 total = 2;
  int64 page = 3;
  int64 size = 4;
}

message UpdateUserRequest {
  string action = 1;
  map<string, string> params = 2;
}
message GetUserRequest {}
message _GetUserRequest {
  string id = 1;
}

message _GetUserByPhoneRequest {
  string phone = 1;
}